show all medicines

--- a/app/src/main/res/layout/fragment_add_medicine.xml
+++ b/app/src/main/res/layout/fragment_add_medicine.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:clickable="true"
-    android:focusable="true"
-    tools:context=".fragments.ShowAllMedicineFragment">
+    tools:context=".fragments.AddMedicineFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/medicine_list_rv"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
