--- a/app/src/main/res/layout/item_medicine_item.xml
+++ b/app/src/main/res/layout/item_medicine_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -22,7 +23,7 @@
         android:text="true"
         android:textSize="16sp"
         android:maxLines="1"
-        android:layout_margin="8sp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/divisor"
         app:layout_constraintBottom_toTopOf="@id/view"
