--- a/app/src/main/res/layout/item_medicine_list_for_sale.xml
+++ b/app/src/main/res/layout/item_medicine_list_for_sale.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:background="@color/purple_200"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -11,6 +11,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="32dp"/>
+        android:padding="8dp"
+        android:layout_height="wrap_content"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/view"
+        android:background="@color/purple_200"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="1dp"
+        android:layout_width="wrap_content"/>
+
+</LinearLayout>
