--- a/app/src/main/res/layout/item_medicine_item.xml
+++ b/app/src/main/res/layout/item_medicine_item.xml
@@ -9,24 +9,19 @@
         android:id="@+id/medicine_name"
         android:text="Medicine Name"
         android:textSize="16sp"
-        android:maxLines="2"
         android:layout_margin="8sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/isH1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view"
-        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@id/view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/isH1"
         android:text="true"
         android:textSize="16sp"
-        android:maxLines="1"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/divisor"
-        app:layout_constraintBottom_toTopOf="@id/view"
+        android:layout_margin="8sp"
+        app:layout_constraintTop_toBottomOf="@id/medicine_name"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -34,21 +29,18 @@
         android:id="@+id/divisor"
         android:text="10"
         android:textSize="16sp"
-        android:maxLines="1"
         android:layout_margin="8sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view"
-        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/isH1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <View
         android:id="@+id/view"
-        android:background="@color/purple_200"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/medicine_name"
+        android:layout_width="wrap_content"
         android:layout_height="1dp"
-        android:layout_width="wrap_content"/>
+        android:background="@color/purple_200"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
