--- a/app/src/main/res/drawable/selected_pager_dash.xml
+++ b/app/src/main/res/drawable/selected_pager_dash.xml
@@ -7,7 +7,7 @@
             android:shape="ring"
             android:thickness="20dp"
             android:useLevel="false">
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@android:color/black"/>
         </shape>
     </item>
 </layer-list>
