AJ: A lot of changes.

--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
-    tools:context=".fragments.SalesFragment">
+    tools:context=".moduls.mposPoc.ui.fragments.SalesFragment">
 
     <EditText
         android:id="@+id/medicine_name_et"
