--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="-2dp"
-    tools:context=".activities.MainActivity">
+    tools:context=".moduls.mposPoc.ui.activities.MainActivity">
 
     <LinearLayout
         android:id="@+id/activity"
