--- a/app/src/main/res/layout/fragment_add_medicine.xml
+++ b/app/src/main/res/layout/fragment_add_medicine.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
-    tools:context=".fragments.AddMedicineFragment">
+    tools:context=".moduls.mposPoc.ui.fragments.AddMedicineFragment">
 
     <EditText
         android:id="@+id/name_et"
