--- a/app/src/main/res/layout/fragment_show_all_medicine.xml
+++ b/app/src/main/res/layout/fragment_show_all_medicine.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
-    tools:context=".fragments.ShowAllMedicineFragment">
+    tools:context=".moduls.mposPoc.ui.fragments.ShowAllMedicineFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicine_list_rv"
