--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -74,6 +74,7 @@ android:background="#F1F191"
 <!--            app:spb_stateNumberForegroundColor="#eeeeee" />-->
 
 <TextView
+    android:id="@+id/text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Fragment 1"
