--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,6 +166,13 @@
             android:layout_marginStart="8dp"
             android:text="Drag View" />
 
+        <Button
+            android:id="@+id/random_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Randon View" />
+
     </LinearLayout>
 
     <RelativeLayout
