--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,96 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#F1F191"
->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#F1F191">
 
-<!--        <View-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:padding="80dp"-->
-<!--            android:layout_margin="80dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/v_1"-->
-<!--            app:layout_constraintEnd_toEndOf="@id/v_1"-->
-<!--            app:layout_constraintStart_toStartOf="@id/v_1"-->
-<!--            app:layout_constraintTop_toTopOf="@id/v_1" />-->
+    <!--        <View-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="0dp"-->
+    <!--            android:padding="80dp"-->
+    <!--            android:layout_margin="80dp"-->
+    <!--            app:layout_constraintBottom_toBottomOf="@id/v_1"-->
+    <!--            app:layout_constraintEnd_toEndOf="@id/v_1"-->
+    <!--            app:layout_constraintStart_toStartOf="@id/v_1"-->
+    <!--            app:layout_constraintTop_toTopOf="@id/v_1" />-->
 
-<!--        <View-->
-<!--            android:id="@+id/v_1"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:background="@color/blue"-->
-<!--            android:padding="16dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/tv_2"-->
-<!--            app:layout_constraintEnd_toEndOf="@id/tv_2"-->
-<!--            app:layout_constraintStart_toStartOf="@id/tv_2"-->
-<!--            app:layout_constraintTop_toTopOf="@id/tv_1" />-->
+    <!--        <View-->
+    <!--            android:id="@+id/v_1"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="0dp"-->
+    <!--            android:background="@color/blue"-->
+    <!--            android:padding="16dp"-->
+    <!--            app:layout_constraintBottom_toBottomOf="@id/tv_2"-->
+    <!--            app:layout_constraintEnd_toEndOf="@id/tv_2"-->
+    <!--            app:layout_constraintStart_toStartOf="@id/tv_2"-->
+    <!--            app:layout_constraintTop_toTopOf="@id/tv_1" />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tv_1"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:background="@color/white"-->
-<!--            android:padding="8dp"-->
-<!--            android:text="ABC1231"-->
-<!--            app:layout_constraintEnd_toEndOf="@id/tv_2"-->
-<!--            app:layout_constraintStart_toStartOf="@id/tv_2"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tv_1"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="16dp"-->
+    <!--            android:background="@color/white"-->
+    <!--            android:padding="8dp"-->
+    <!--            android:text="ABC1231"-->
+    <!--            app:layout_constraintEnd_toEndOf="@id/tv_2"-->
+    <!--            app:layout_constraintStart_toStartOf="@id/tv_2"-->
+    <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tv_2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:background="@color/white"-->
-<!--            android:padding="8dp"-->
-<!--            android:text="XYZ1231231231"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/tv_1" />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tv_2"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="16dp"-->
+    <!--            android:background="@color/white"-->
+    <!--            android:padding="8dp"-->
+    <!--            android:text="XYZ1231231231"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toBottomOf="@id/tv_1" />-->
 
-<!--        <com.kofigyan.stateprogressbar.StateProgressBar-->
-<!--            android:id="@+id/your_state_progress_bar_id"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerInParent="true"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            android:visibility="gone"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:spb_animateToCurrentProgressState="true"-->
-<!--            app:spb_checkStateCompleted="true"-->
-<!--            app:spb_currentStateDescriptionColor="#0F9D58"-->
-<!--            app:spb_currentStateNumber="two"-->
-<!--            app:spb_maxStateNumber="four"-->
-<!--            app:spb_stateBackgroundColor="#BDBDBD"-->
-<!--            app:spb_stateDescriptionColor="#808080"-->
-<!--            app:spb_stateForegroundColor="#0F9D58"-->
-<!--            app:spb_stateNumberBackgroundColor="#808080"-->
-<!--            app:spb_stateNumberForegroundColor="#eeeeee" />-->
+    <!--        <com.kofigyan.stateprogressbar.StateProgressBar-->
+    <!--            android:id="@+id/your_state_progress_bar_id"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_centerInParent="true"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            android:visibility="gone"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:spb_animateToCurrentProgressState="true"-->
+    <!--            app:spb_checkStateCompleted="true"-->
+    <!--            app:spb_currentStateDescriptionColor="#0F9D58"-->
+    <!--            app:spb_currentStateNumber="two"-->
+    <!--            app:spb_maxStateNumber="four"-->
+    <!--            app:spb_stateBackgroundColor="#BDBDBD"-->
+    <!--            app:spb_stateDescriptionColor="#808080"-->
+    <!--            app:spb_stateForegroundColor="#0F9D58"-->
+    <!--            app:spb_stateNumberBackgroundColor="#808080"-->
+    <!--            app:spb_stateNumberForegroundColor="#eeeeee" />-->
 
-<TextView
-    android:id="@+id/text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Fragment 1"
-    android:textSize="32sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
+        android:layout_width="400dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:background="@null"
+        android:elevation="8dp"
+        android:padding="8dp"
+        android:translationZ="8dp"
+        app:cardCornerRadius="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<Button
-    android:id="@+id/btn_1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Fragment 1"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:clickable="false"
+            android:fitsSystemWindows="true" />
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fragment 1"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card" />
+
+    <Button
+        android:id="@+id/btn_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fragment 1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
